fix device screen styles on mobile

--- a/assets/css/_section-work.scss
+++ b/assets/css/_section-work.scss
@@ -156,13 +156,11 @@
 		@include transform(translate3d(.001vw,-10%,0));
 		background-color: #222;
 		z-index: 300;
-		transition: opacity .3s .45s,width .5s cubic-bezier(.82,0,.61,.89),transform .5s cubic-bezier(.82,0,.61,.89),height .5s cubic-bezier(.82,0,.61,.89);
 		&.visible {
 			width: 100vw;
 			height: 100vh;
 			opacity: 1;
 			@include transform(translate3d(.001vw, 0vh, 0));
-			transition: opacity .25s 0s,width .35s cubic-bezier(.55,0,.9,.7) .1s,transform .35s cubic-bezier(.55, 0, .9, .7) .1s,height .35s cubic-bezier(.55,0,.9,.7) .1s,border .2s linear .3s;
 			.modal-content, .close-btn, .case-study {
 				opacity: 1.0;
 				display: block;
@@ -552,6 +550,7 @@
 										&.tidal-marketing-mobile {
 											left: 45%;
 											display: block;
+											width: 100%;
 											@media only screen and (min-width: 1200px) {
 												display: none;
 											}
@@ -582,12 +581,12 @@
 										}
 									}
 									
-									&.vssl {
-										&.phone {
-											top: 45%;
-											left: 25%;
-										}
-									}
+									//&.vssl {
+									//	&.phone {
+									//		top: 45%;
+									//		left: 33%;
+									//	}
+									//}
 								}
 								
 							}
@@ -659,7 +658,6 @@
 										position: absolute;
 										top: 50%;
 										left: 50%;
-										//transform: translate(-50%, -50%);
 										@include transform(translate(-50%, -50%));
 									}
 								}
@@ -677,6 +675,14 @@
 					background-image: url('../../assets/img/work/tidal-dashboard/tidal-dashboard-header-br.jpg');
 				}
 				
+				.main .content .job-desc .right .device-screens .device-screen {
+					&.phone {
+						@media only screen and (max-width: 768px) {
+							left: 33%;
+						}
+					}
+				}
+				
 				.mockup-full-pg {
 					margin-bottom: 100px;
 				}
@@ -687,16 +693,16 @@
 					background-image: url('../../assets/img/work/tidal-styleguide/styleguide-bg-test.png');
 				}
 				
-				.main .content .job-desc .right .device-screens .device-screen{
+				.main .content .job-desc .right .device-screens .device-screen {
 					&.phone {
-						left: 35%;
+						left: 27%;
 					}
 					&.tablet {
 						top: 10%;
-						left: 50%;
+						left: 37%;
 					}
 					&.desktop {
-						left: 40%;
+						left: 43%;
 					}
 				}
 				
@@ -719,11 +725,29 @@
 				.header {
 					background-image: url('../../assets/img/work/concern/concern-header.jpg');
 				}
+				.main .content .job-desc .right .device-screens .device-screen {
+					&.phone {
+						top: 47%;
+						@media only screen and (max-width: 768px) {
+							left: 33%;
+						}
+						
+					}
+				}
 			}
 			
 			&.vssl {
 				.header {
 					background-image: url('../../assets/img/work/vssl/vssl-header.jpg');
+				}
+				
+				.main .content .job-desc .right .device-screens .device-screen {
+					&.phone {
+						top: 45%;
+						@media only screen and (max-width: 768px) {
+							left: 33%;
+						}
+					}
 				}
 				
 				.main {
